--- a/cereals-network-supplementary.Rmd
+++ b/cereals-network-supplementary.Rmd
@@ -172,7 +172,9 @@ dP_reg <- xtable(as.data.frame(dP_fit), label = "tab:dP_reg", align = c("l|rrr|r
                     "deviation ($\\sigma_{res}$) for the effect of the interannual $\\Delta P$",
                     "on each other component of the FAO food balance sheets (FBS)",
                     "for cereals and cereal products, extracted by country and year and",
-                    "expressed on a per capita basis. We used the FBS data from 1994 to 2011",
+                    "expressed on a per capita basis. Note that $\\Delta R$ is a flow \\emph{to}", 
+                    "reserves (opposite of the FBS sign convention) and $\\Delta(\\Delta R)$ is",
+                    "the interannual change in that flow. We used the FBS data from 1994 to 2011",
                     "for the 153 countries that reported cereals production for each year in this",
                     "period and reached a population of at least 500,000. The right-hand side",
                     "results are based on a subset of the country-years where per capita",
